[package]
name = "namethat"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.1"
async-session = "3.0.0"
async-trait = "0.1.73"
axum-extra = "0.7.7"
axum-sessions = "0.5.0"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
headers = "0.3.8"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
time = "0.3.25"
rust-embed = "8.0.0"
uuid = { version = "1.4.1", features = ["serde", "v8"] }
tera = "1.19.1"

[dependencies.axum]
version = "0.6.20"
features = ["ws", "headers"]

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["sink", "std"]

[dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["default", "chrono", "postgres", "runtime-tokio-rustls", "time", "uuid"]

[dependencies.tokio]
version = "1.31.0"
features = ["full"]

[dependencies.tower]
version = "0.4.13"
features = ["util"]

[dependencies.tower-http]
version = "0.4.3"
features = ["fs", "trace"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dev-dependencies]
serial_test = "2.0.0"
